# PVMockupGui

./: .gitignore  .gitingore  CMakeLists.txt  README
inc/: TimeControlWidget.h  TimeControlWidget.ui  axisinformation.h  axisinteractor.h  geometryparser.h  indicator.h  iview.h  modecontrolwidget.h  mpMainWindow.h  mpMainWindow.ui  mpmainwindow.h  multisliceview.h  scalepicker.h  standardview.h  threesliceview.h  timecontrolwidget.h
src/: TimeControlWidget.cpp  axisinformation.cpp  axisinteractor.cpp  geometryparser.cpp  indicator.cpp  iview.cpp  main.cpp  modecontrolwidget.cpp  mpMainWindow.cpp  mpmainwindow.cpp  multisliceview.cpp  scalepicker.cpp  standardview.cpp  test.cpp  threesliceview.cpp  timecontrolwidget.cpp
ui/: axisinteractor.ui  modecontrolwidget.ui  mpMainWindow.ui  mpmainwindow.ui  multisliceview.ui  standardview.ui  threesliceview.ui
